--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "start": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Hristo Kamenov",
+  "author": "n4y0n & Revanee",
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^4.0.0",
     "express": "^4.16.2",
     "jquery": "^3.3.1",
     "popper.js": "^1.12.9",
-    "serialport": "^6.1.1",
-    "socketio": "^1.0.0"
+    "serialport": "^6.1.1"
   },
   "devDependencies": {
     "@types/serialport": "^6.0.1",
+    "socket.io": "^2.0.4",
     "typescript": "^2.7.2"
   }
 }
