--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "colors": "^1.3.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
@@ -18,7 +19,7 @@
     "serialize-javascript": "^1.5.0",
     "serialport": "^6.2.0",
     "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1"
+    "socket.io-client": "^2.1.0"
   },
   "devDependencies": {
     "@types/serialport": "^6.0.3",
